// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analyser > should register only component of the same tech 1`] = `
{
  "childs": [
    {
      "childs": [],
      "dependencies": [
        [
          "docker",
          "postgres",
          "15.1-alpine",
        ],
      ],
      "edges": [],
      "id": "3",
      "inComponent": null,
      "languages": {},
      "name": "db",
      "path": [
        "/docker-compose.yml",
        "/package.json",
      ],
      "tech": "postgresql",
      "techs": [
        "postgresql",
      ],
    },
    {
      "childs": [],
      "dependencies": [
        [
          "npm",
          "pg",
          "1.0.0",
        ],
      ],
      "edges": [
        {
          "read": true,
          "target": "3",
          "write": true,
        },
      ],
      "id": "4",
      "inComponent": null,
      "languages": {
        "JSON": 1,
        "YAML": 1,
      },
      "name": "test",
      "path": [
        "/package.json",
      ],
      "tech": null,
      "techs": [
        "docker",
        "nodejs",
        "postgresql",
      ],
    },
  ],
  "dependencies": [
    [
      "docker",
      "postgres",
      "15.1-alpine",
    ],
    [
      "npm",
      "pg",
      "1.0.0",
    ],
  ],
  "edges": [],
  "id": "6",
  "inComponent": null,
  "languages": {
    "JSON": 2,
    "YAML": 2,
  },
  "name": "flatten",
  "path": [
    "/",
    "/docker-compose.yml",
    "/package.json",
  ],
  "tech": null,
  "techs": [
    "docker",
    "nodejs",
    "postgresql",
  ],
}
`;

exports[`analyser > should run correctly 1`] = `
{
  "childs": [
    {
      "childs": [],
      "dependencies": [
        [
          "docker",
          "postgres",
          "14.5-alpine",
        ],
      ],
      "edges": [],
      "id": "9",
      "inComponent": null,
      "languages": {},
      "name": "db",
      "path": [
        "/docker-compose.yml",
      ],
      "tech": "postgresql",
      "techs": [],
    },
    {
      "childs": [
        {
          "childs": [
            {
              "childs": [],
              "dependencies": [],
              "edges": [],
              "id": "18",
              "inComponent": null,
              "languages": {},
              "name": "datadog",
              "path": [
                "/pkgs/api/package.json",
              ],
              "tech": "datadog",
              "techs": [],
            },
          ],
          "dependencies": [
            [
              "npm",
              "dd-trace",
              "1.0.1",
            ],
            [
              "npm",
              "fastify",
              "4.17.0",
            ],
            [
              "npm",
              "prisma",
              "4.13.0",
            ],
            [
              "npm",
              "typescript",
              "5.0.4",
            ],
          ],
          "edges": [
            {
              "read": true,
              "target": "18",
              "write": true,
            },
          ],
          "id": "17",
          "inComponent": null,
          "languages": {
            "JSON": 1,
          },
          "name": "@fake/api",
          "path": [
            "/pkgs/api/package.json",
          ],
          "tech": null,
          "techs": [
            "datadog",
            "fastify",
            "nodejs",
            "prisma",
            "typescript",
          ],
        },
        {
          "childs": [
            {
              "childs": [],
              "dependencies": [],
              "edges": [],
              "id": "20",
              "inComponent": null,
              "languages": {},
              "name": "vercel",
              "path": [
                "/pkgs/app/package.json",
              ],
              "tech": "vercel",
              "techs": [],
            },
          ],
          "dependencies": [
            [
              "npm",
              "@fake/api",
              "1.0.0",
            ],
            [
              "npm",
              "react",
              "4.17.0",
            ],
            [
              "npm",
              "typescript",
              "5.0.4",
            ],
            [
              "npm",
              "vite",
              "4.3.3",
            ],
          ],
          "edges": [],
          "id": "19",
          "inComponent": "20",
          "languages": {
            "HTML": 1,
            "JSON": 1,
            "SCSS": 1,
          },
          "name": "@fake/app",
          "path": [
            "/pkgs/app/package.json",
          ],
          "tech": null,
          "techs": [
            "nodejs",
            "react",
            "typescript",
            "vercel",
            "vite",
          ],
        },
        {
          "childs": [],
          "dependencies": [
            [
              "terraform",
              "registry.terraform.io/hashicorp/google",
              "4.61.0",
            ],
          ],
          "edges": [],
          "id": "24",
          "inComponent": null,
          "languages": {},
          "name": "Google Cloud Platform",
          "path": [
            "/terraform/.terraform.lock.hcl",
          ],
          "tech": "gcp",
          "techs": [],
        },
        {
          "childs": [],
          "dependencies": [
            [
              "terraform",
              "registry.terraform.io/vercel/vercel",
              "4.61.0",
            ],
          ],
          "edges": [],
          "id": "25",
          "inComponent": null,
          "languages": {},
          "name": "Vercel",
          "path": [
            "/terraform/.terraform.lock.hcl",
          ],
          "tech": "vercel",
          "techs": [],
        },
        {
          "childs": [],
          "dependencies": [],
          "edges": [],
          "id": "14",
          "inComponent": null,
          "languages": {},
          "name": "postgresql",
          "path": [
            "/deno/deno.lock",
          ],
          "tech": "postgresql",
          "techs": [],
        },
        {
          "childs": [],
          "dependencies": [
            [
              "rust",
              "dotenv",
              "0.15.0",
            ],
          ],
          "edges": [],
          "id": "22",
          "inComponent": null,
          "languages": {
            "TOML": 1,
          },
          "name": "rust-server",
          "path": [
            "/rust/Cargo.toml",
          ],
          "tech": null,
          "techs": [
            "rust",
          ],
        },
        {
          "childs": [],
          "dependencies": [],
          "edges": [],
          "id": "16",
          "inComponent": null,
          "languages": {
            "Go": 1,
          },
          "name": "server",
          "path": [
            "/golang/cmd/server/main.go",
          ],
          "tech": "golang",
          "techs": [
            "golang",
            "rust",
          ],
        },
      ],
      "dependencies": [
        [
          "npm",
          "@typescript-eslint/eslint-plugin",
          "5.57.1",
        ],
        [
          "npm",
          "@typescript-eslint/parser",
          "5.57.1",
        ],
        [
          "npm",
          "eslint",
          "8.39.0",
        ],
        [
          "npm",
          "prettier",
          "2.8.7",
        ],
        [
          "npm",
          "typescript",
          "4.9.5",
        ],
        [
          "deno",
          "https://deno.land/x/postgres@v0.17.0/mod.ts",
          "23a1a36928f1b6d3b0170aaa67de09af12aa998525f608ff7331b9fb364cbde6",
        ],
        [
          "golang",
          "github.com/google/uuid",
          "v1.3.0",
        ],
        [
          "ruby",
          "rails",
          "6.1.7.4",
        ],
        [
          "ruby",
          "puma\\", \\"6.3.0",
          "latest",
        ],
        [
          "terraform",
          "registry.terraform.io/hashicorp/google",
          "4.61.0",
        ],
        [
          "terraform",
          "registry.terraform.io/vercel/vercel",
          "4.61.0",
        ],
      ],
      "edges": [],
      "id": "12",
      "inComponent": null,
      "languages": {
        "AMPL": 1,
        "HCL": 1,
        "JSON": 1,
        "YAML": 1,
      },
      "name": "fake",
      "path": [
        "/package.json",
      ],
      "tech": null,
      "techs": [
        "deno",
        "docker",
        "eslint",
        "golang",
        "nodejs",
        "prettier",
        "ruby",
        "terraform",
        "typescript",
      ],
    },
    {
      "childs": [],
      "dependencies": [
        [
          "docker",
          "redis",
          "7.0.4-alpine",
        ],
      ],
      "edges": [],
      "id": "10",
      "inComponent": null,
      "languages": {},
      "name": "redis",
      "path": [
        "/docker-compose.yml",
      ],
      "tech": "redis",
      "techs": [],
    },
    {
      "childs": [],
      "dependencies": [
        [
          "docker",
          "unknown",
          "7.17.5",
        ],
      ],
      "edges": [],
      "id": "11",
      "inComponent": null,
      "languages": {},
      "name": "unknown",
      "path": [
        "/docker-compose.yml",
      ],
      "tech": null,
      "techs": [],
    },
  ],
  "dependencies": [],
  "edges": [],
  "id": "7",
  "inComponent": null,
  "languages": {},
  "name": "main",
  "path": [
    "/",
  ],
  "tech": null,
  "techs": [],
}
`;

exports[`analyser > should run correctly 2`] = `
{
  "childs": [
    {
      "childs": [],
      "dependencies": [
        [
          "npm",
          "dd-trace",
          "1.0.1",
        ],
        [
          "npm",
          "fastify",
          "4.17.0",
        ],
        [
          "npm",
          "prisma",
          "4.13.0",
        ],
        [
          "npm",
          "typescript",
          "5.0.4",
        ],
      ],
      "edges": [
        {
          "read": true,
          "target": "18",
          "write": true,
        },
      ],
      "id": "17",
      "inComponent": null,
      "languages": {
        "JSON": 1,
      },
      "name": "@fake/api",
      "path": [
        "/pkgs/api/package.json",
      ],
      "tech": null,
      "techs": [
        "datadog",
        "fastify",
        "nodejs",
        "prisma",
        "typescript",
      ],
    },
    {
      "childs": [],
      "dependencies": [
        [
          "npm",
          "@fake/api",
          "1.0.0",
        ],
        [
          "npm",
          "react",
          "4.17.0",
        ],
        [
          "npm",
          "typescript",
          "5.0.4",
        ],
        [
          "npm",
          "vite",
          "4.3.3",
        ],
      ],
      "edges": [
        {
          "read": true,
          "target": "17",
          "write": true,
        },
      ],
      "id": "19",
      "inComponent": "20",
      "languages": {
        "HTML": 1,
        "JSON": 1,
        "SCSS": 1,
      },
      "name": "@fake/app",
      "path": [
        "/pkgs/app/package.json",
      ],
      "tech": null,
      "techs": [
        "nodejs",
        "react",
        "typescript",
        "vercel",
        "vite",
      ],
    },
    {
      "childs": [],
      "dependencies": [
        [
          "terraform",
          "registry.terraform.io/hashicorp/google",
          "4.61.0",
        ],
      ],
      "edges": [],
      "id": "24",
      "inComponent": null,
      "languages": {},
      "name": "Google Cloud Platform",
      "path": [
        "/terraform/.terraform.lock.hcl",
      ],
      "tech": "gcp",
      "techs": [],
    },
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "18",
      "inComponent": null,
      "languages": {},
      "name": "datadog",
      "path": [
        "/pkgs/api/package.json",
      ],
      "tech": "datadog",
      "techs": [],
    },
    {
      "childs": [],
      "dependencies": [
        [
          "docker",
          "postgres",
          "14.5-alpine",
        ],
      ],
      "edges": [],
      "id": "9",
      "inComponent": null,
      "languages": {},
      "name": "db",
      "path": [
        "/docker-compose.yml",
        "/deno/deno.lock",
      ],
      "tech": "postgresql",
      "techs": [
        "postgresql",
      ],
    },
    {
      "childs": [],
      "dependencies": [
        [
          "npm",
          "@typescript-eslint/eslint-plugin",
          "5.57.1",
        ],
        [
          "npm",
          "@typescript-eslint/parser",
          "5.57.1",
        ],
        [
          "npm",
          "eslint",
          "8.39.0",
        ],
        [
          "npm",
          "prettier",
          "2.8.7",
        ],
        [
          "npm",
          "typescript",
          "4.9.5",
        ],
        [
          "deno",
          "https://deno.land/x/postgres@v0.17.0/mod.ts",
          "23a1a36928f1b6d3b0170aaa67de09af12aa998525f608ff7331b9fb364cbde6",
        ],
        [
          "golang",
          "github.com/google/uuid",
          "v1.3.0",
        ],
        [
          "ruby",
          "rails",
          "6.1.7.4",
        ],
        [
          "ruby",
          "puma\\", \\"6.3.0",
          "latest",
        ],
        [
          "terraform",
          "registry.terraform.io/hashicorp/google",
          "4.61.0",
        ],
        [
          "terraform",
          "registry.terraform.io/vercel/vercel",
          "4.61.0",
        ],
      ],
      "edges": [],
      "id": "12",
      "inComponent": null,
      "languages": {
        "AMPL": 1,
        "Go": 1,
        "HCL": 1,
        "HTML": 1,
        "JSON": 3,
        "SCSS": 1,
        "TOML": 1,
        "YAML": 1,
      },
      "name": "fake",
      "path": [
        "/package.json",
      ],
      "tech": null,
      "techs": [
        "deno",
        "docker",
        "eslint",
        "golang",
        "nodejs",
        "prettier",
        "ruby",
        "terraform",
        "typescript",
      ],
    },
    {
      "childs": [],
      "dependencies": [
        [
          "docker",
          "redis",
          "7.0.4-alpine",
        ],
      ],
      "edges": [],
      "id": "10",
      "inComponent": null,
      "languages": {},
      "name": "redis",
      "path": [
        "/docker-compose.yml",
      ],
      "tech": "redis",
      "techs": [],
    },
    {
      "childs": [],
      "dependencies": [
        [
          "rust",
          "dotenv",
          "0.15.0",
        ],
      ],
      "edges": [],
      "id": "22",
      "inComponent": null,
      "languages": {
        "TOML": 1,
      },
      "name": "rust-server",
      "path": [
        "/rust/Cargo.toml",
      ],
      "tech": null,
      "techs": [
        "rust",
      ],
    },
    {
      "childs": [],
      "dependencies": [],
      "edges": [],
      "id": "16",
      "inComponent": null,
      "languages": {
        "Go": 1,
      },
      "name": "server",
      "path": [
        "/golang/cmd/server/main.go",
      ],
      "tech": "golang",
      "techs": [
        "golang",
        "rust",
      ],
    },
    {
      "childs": [],
      "dependencies": [
        [
          "docker",
          "unknown",
          "7.17.5",
        ],
      ],
      "edges": [],
      "id": "11",
      "inComponent": null,
      "languages": {},
      "name": "unknown",
      "path": [
        "/docker-compose.yml",
      ],
      "tech": null,
      "techs": [],
    },
    {
      "childs": [],
      "dependencies": [
        [
          "terraform",
          "registry.terraform.io/vercel/vercel",
          "4.61.0",
        ],
      ],
      "edges": [],
      "id": "20",
      "inComponent": null,
      "languages": {},
      "name": "vercel",
      "path": [
        "/pkgs/app/package.json",
        "/terraform/.terraform.lock.hcl",
      ],
      "tech": "vercel",
      "techs": [
        "vercel",
      ],
    },
  ],
  "dependencies": [
    [
      "docker",
      "postgres",
      "14.5-alpine",
    ],
    [
      "docker",
      "redis",
      "7.0.4-alpine",
    ],
    [
      "docker",
      "unknown",
      "7.17.5",
    ],
    [
      "npm",
      "dd-trace",
      "1.0.1",
    ],
    [
      "npm",
      "fastify",
      "4.17.0",
    ],
    [
      "npm",
      "prisma",
      "4.13.0",
    ],
    [
      "npm",
      "typescript",
      "5.0.4",
    ],
    [
      "terraform",
      "registry.terraform.io/vercel/vercel",
      "4.61.0",
    ],
    [
      "npm",
      "@fake/api",
      "1.0.0",
    ],
    [
      "npm",
      "react",
      "4.17.0",
    ],
    [
      "npm",
      "vite",
      "4.3.3",
    ],
    [
      "rust",
      "dotenv",
      "0.15.0",
    ],
    [
      "terraform",
      "registry.terraform.io/hashicorp/google",
      "4.61.0",
    ],
    [
      "npm",
      "@typescript-eslint/eslint-plugin",
      "5.57.1",
    ],
    [
      "npm",
      "@typescript-eslint/parser",
      "5.57.1",
    ],
    [
      "npm",
      "eslint",
      "8.39.0",
    ],
    [
      "npm",
      "prettier",
      "2.8.7",
    ],
    [
      "npm",
      "typescript",
      "4.9.5",
    ],
    [
      "deno",
      "https://deno.land/x/postgres@v0.17.0/mod.ts",
      "23a1a36928f1b6d3b0170aaa67de09af12aa998525f608ff7331b9fb364cbde6",
    ],
    [
      "golang",
      "github.com/google/uuid",
      "v1.3.0",
    ],
    [
      "ruby",
      "rails",
      "6.1.7.4",
    ],
    [
      "ruby",
      "puma\\", \\"6.3.0",
      "latest",
    ],
  ],
  "edges": [],
  "id": "26",
  "inComponent": null,
  "languages": {
    "AMPL": 2,
    "Go": 3,
    "HCL": 2,
    "HTML": 3,
    "JSON": 8,
    "SCSS": 3,
    "TOML": 3,
    "YAML": 2,
  },
  "name": "flatten",
  "path": [
    "/",
    "/docker-compose.yml",
    "/deno/deno.lock",
    "/golang/cmd/server/main.go",
    "/pkgs/api/package.json",
    "/pkgs/app/package.json",
    "/terraform/.terraform.lock.hcl",
    "/rust/Cargo.toml",
    "/package.json",
  ],
  "tech": null,
  "techs": [
    "datadog",
    "deno",
    "docker",
    "eslint",
    "fastify",
    "gcp",
    "golang",
    "nodejs",
    "postgresql",
    "prettier",
    "prisma",
    "react",
    "redis",
    "ruby",
    "rust",
    "terraform",
    "typescript",
    "vercel",
    "vite",
  ],
}
`;
